--- a/vault.html
+++ b/vault.html
@@ -81,6 +81,18 @@
   </div>
 </div>
 
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const btn = document.getElementById("confirmSignBtn");
+    if (btn) {
+      btn.addEventListener("click", () => {
+        document.getElementById("modal").classList.add("hidden");
+        window._allowSign = true;
+      });
+    }
+  });
+</script>
+  
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
   import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
