--- a/vault.html
+++ b/vault.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#000" />
   <title>Quantum Vault – Create Profile</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
   <style>
     :root {
       --bg: #000; --text: #fff; --accent: #00ffe1; --input-bg: #111;
@@ -74,123 +72,108 @@
   </div>
 
   <div id="modal" class="hidden">
-  <div id="modal-content">
-    <h2>Sign to Confirm</h2>
-    <p>This signature proves you own this wallet.<br>No transactions will be made.</p>
-    <button id="confirmSignBtn">Continue</button>
+    <div id="modal-content">
+      <h2>Sign to Confirm</h2>
+      <p>This signature proves you own this wallet.<br>No transactions will be made.</p>
+      <button id="confirmSignBtn">Continue</button>
+    </div>
   </div>
-</div>
 
-  <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const btn = document.getElementById("confirmSignBtn");
-    if (btn) {
-      btn.addEventListener("click", () => {
-        document.getElementById("modal").classList.add("hidden");
-        window._allowSign = true;
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCJwqDFZtf1PkZwAalOaf2_7eWtej5HIfA",
+      authDomain: "y2k-arcade.firebaseapp.com",
+      projectId: "y2k-arcade",
+      storageBucket: "y2k-arcade.appspot.com",
+      messagingSenderId: "1063043176357",
+      appId: "1:1063043176357:web:20bc22e9cbf269ff40fa4c"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    const avatarGrid = document.getElementById("avatarGrid");
+    const walletBtn = document.getElementById("walletBtn");
+    const createBtn = document.getElementById("createBtn");
+    const usernameInput = document.getElementById("username");
+    const xHandleInput = document.getElementById("xHandle");
+    const walletAddr = document.getElementById("walletAddr");
+
+    const avatarSeeds = Array.from({ length: 20 }, (_, i) => `quantumBot-${i}`);
+    avatarSeeds.forEach(seed => {
+      const img = document.createElement("img");
+      img.src = `https://api.dicebear.com/6.x/bottts/svg?seed=${seed}`;
+      img.className = "avatar";
+      img.addEventListener("click", () => {
+        document.querySelectorAll(".avatar").forEach(a => a.classList.remove("selected"));
+        img.classList.add("selected");
+        selectedAvatar = img.src;
       });
+      avatarGrid.appendChild(img);
+    });
+
+    let currentWallet = "";
+    let selectedAvatar = "";
+
+    document.getElementById("confirmSignBtn").addEventListener("click", () => {
+      document.getElementById("modal").classList.add("hidden");
+      window._allowSign = true;
+    });
+
+    async function connectWallet() {
+      walletBtn.innerText = "Connecting...";
+      const provider = new ethers.providers.Web3Provider(window.ethereum);
+      await provider.send("eth_requestAccounts", []);
+      const signer = provider.getSigner();
+      currentWallet = (await signer.getAddress()).toLowerCase();
+      walletAddr.innerText = `Connected: ${currentWallet.slice(0, 6)}...${currentWallet.slice(-4)}`;
+      walletAddr.classList.remove("hidden");
+
+      window._allowSign = false;
+      document.getElementById("modal").classList.remove("hidden");
+      await new Promise(resolve => {
+        const check = () => window._allowSign ? resolve(true) : setTimeout(check, 100);
+        check();
+      });
+
+      await signer.signMessage("Quantum Vault Login: This proves wallet ownership. DYOR.");
+
+      const snap = await getDoc(doc(db, "users", currentWallet));
+      if (snap.exists()) {
+        alert("Welcome back! Redirecting...");
+        window.location.href = "https://quantum-vault-y2kxroast.netlify.app/";
+      } else {
+        walletBtn.classList.add("hidden");
+        createBtn.classList.remove("hidden");
+      }
     }
-  });
-</script>
-  
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-  import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCJwqDFZtf1PkZwAalOaf2_7eWtej5HIfA",
-    authDomain: "y2k-arcade.firebaseapp.com",
-    projectId: "y2k-arcade",
-    storageBucket: "y2k-arcade.appspot.com",
-    messagingSenderId: "1063043176357",
-    appId: "1:1063043176357:web:20bc22e9cbf269ff40fa4c"
-  };
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+    async function saveProfile() {
+      const username = usernameInput.value.trim();
+      const xHandle = xHandleInput.value.trim();
+      if (!currentWallet || !username || !selectedAvatar) {
+        return alert("Username and avatar required.");
+      }
 
-const avatarGrid = document.getElementById("avatarGrid");
-const walletBtn = document.getElementById("walletBtn");
-const createBtn = document.getElementById("createBtn");
-const usernameInput = document.getElementById("username");
-const xHandleInput = document.getElementById("xHandle");
-const walletAddr = document.getElementById("walletAddr");
+      const data = {
+        username,
+        xHandle,
+        pfpUrl: selectedAvatar,
+        wallet: currentWallet,
+        profileCreated: true,
+        createdAt: Date.now()
+      };
 
-// Attach modal confirm logic immediately
-document.getElementById("confirmSignBtn").addEventListener("click", () => {
-  document.getElementById("modal").classList.add("hidden");
-  window._allowSign = true;
-});
-
-  let currentWallet = "";
-  let selectedAvatar = "";
-  const avatarSeeds = Array.from({ length: 20 }, (_, i) => `quantumBot-${i}`);
-  avatarSeeds.forEach(seed => {
-    const img = document.createElement("img");
-    img.src = `https://api.dicebear.com/6.x/bottts/svg?seed=${seed}`;
-    img.className = "avatar";
-    img.addEventListener("click", () => {
-      document.querySelectorAll(".avatar").forEach(a => a.classList.remove("selected"));
-      img.classList.add("selected");
-      selectedAvatar = img.src;
-    });
-    avatarGrid.appendChild(img);
-  });
-
-  async function connectWallet() {
-    walletBtn.innerText = "Connecting...";
-    const provider = new ethers.providers.Web3Provider(window.ethereum);
-    await provider.send("eth_requestAccounts", []);
-    const signer = provider.getSigner();
-    currentWallet = (await signer.getAddress()).toLowerCase();
-    walletAddr.innerText = `Connected: ${currentWallet.slice(0, 6)}...${currentWallet.slice(-4)}`;
-    walletAddr.classList.remove("hidden");
-
-    // Show signature modal
-    window._allowSign = false;
-    document.getElementById("modal").classList.remove("hidden");
-
-    await new Promise(resolve => {
-      const check = () => window._allowSign ? resolve(true) : setTimeout(check, 100);
-      check();
-    });
-
-    const msg = `Quantum Vault Login:\nThis signs ownership. No transaction will occur.\nDYOR. You acknowledge risks of web3 gaming.`;
-    await signer.signMessage(msg);
-
-    const snap = await getDoc(doc(db, "users", currentWallet));
-    if (snap.exists()) {
-      alert("Welcome back! Redirecting...");
+      await setDoc(doc(db, "users", currentWallet), data, { merge: true });
+      alert("Profile created. Entering Vault...");
       window.location.href = "https://quantum-vault-y2kxroast.netlify.app/";
-    } else {
-      walletBtn.classList.add("hidden");
-      createBtn.classList.remove("hidden");
     }
-  }
 
-  async function saveProfile() {
-    const username = usernameInput.value.trim();
-    const xHandle = xHandleInput.value.trim();
-
-if (!currentWallet || !username || !selectedAvatar) {
-  return alert("Username and avatar required.");
-}
-
-const data = {
-  username,
-  xHandle,
-  pfpUrl: selectedAvatar,
-  wallet: currentWallet,
-  profileCreated: true,
-  createdAt: Date.now()
-};
-
-    await setDoc(doc(db, "users", currentWallet), data, { merge: true });
-    alert("Profile created. Entering Vault...");
-    window.location.href = "https://quantum-vault-y2kxroast.netlify.app/";
-  }
-
-  walletBtn.onclick = connectWallet;
-  createBtn.onclick = saveProfile;
-</script>
+    walletBtn.onclick = connectWallet;
+    createBtn.onclick = saveProfile;
+  </script>
 </body>
 </html>
